# life-decision-simulator

./: .gitignore  ARCHITECTURE.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  llm.py  main.py  schemas.py  state.py
backend/app/agents/: intake.py  orchestrator.py  research.py  scenario_generator.py
backend/app/simulation/: monte_carlo.py
backend/app/tools/: retriever.py  web_search.py
backend/tests/: conftest.py  test_simulation.py  test_smoke.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: ChatView.tsx  IntakeForm.tsx  MonteCarloChart.tsx  ScenarioCards.tsx  TradeoffMatrix.tsx
life-decision-simulator/: .env.example  README.md  main.py  requirements.txt
life-decision-simulator/agents/: __init__.py  analytical_agent.py  conversational_agent.py  decision_framer_agent.py  orchestrator_agent.py  research_agent.py  scenario_explorer_agent.py  uncertainty_agent.py
life-decision-simulator/backend/: .env.example  pyproject.toml
life-decision-simulator/backend/app/: config.py  (+4 more)
life-decision-simulator/core/: memory_manager.py  schemas.py  shared_state.py
life-decision-simulator/data/: cost_of_living_index.csv  employment_rates.csv  salary_outcomes_by_field.csv  time_to_first_job.csv
life-decision-simulator/frontend/: app.js  index.html  package.json
life-decision-simulator/rules/: dmn_engine.py  rules_repository.json
life-decision-simulator/tests/: test_analytical_agent.py  test_conversational_agent.py  test_dmn_engine.py
(+29 files in other folders)
